--- a/ChatWeb/chat-app/src/app/pages/chatting/chatting.component.css
+++ b/ChatWeb/chat-app/src/app/pages/chatting/chatting.component.css
@@ -1,26 +1,26 @@
-
 body {
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
-html, body {
+html,
+body {
   height: 100vh !important;
 }
 emoji-mart {
   z-index: 999;
 }
 
-.no-chat-selected{
+.no-chat-selected {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 10px;
   height: 100%;
 }
-.no-chat-img{
-  width:50%;
+.no-chat-img {
+  width: 50%;
 }
-.no-conversations{
+.no-conversations {
   text-align: center;
   margin-top: 25px;
   color: #777;
@@ -29,42 +29,43 @@ emoji-mart {
   margin-left: 7.5%;
   font-size: 11px;
   padding: 3px 8px;
-  color: #BBB;
-  background-color: #FFF;
-  border: 1px solid #E5E5E5;
+  color: #bbb;
+  background-color: #fff;
+  border: 1px solid #e5e5e5;
   border-radius: 15px;
   text-align: center;
 }
 .Left-section .message-active {
   height: 90px;
   background-color: #dee2e6;
-  border-bottom: solid 1px #E0E0E0;
+  border-bottom: solid 1px #e0e0e0;
 }
-.Messages{
+.Messages {
   display: flex;
   flex-wrap: wrap;
 }
-    
-.Left-section .left-section .unread{
+
+.Left-section .left-section .unread {
   font-weight: 700;
 }
 
 .header-chat .username {
   margin-left: 20px;
   font-size: 13pt;
-  color:#3f3f3f;
+  color: #3f3f3f;
   display: flex;
   flex-direction: column;
   justify-self: start;
 }
 .header .last-seen {
-  color:#888;
+  color: #888;
   font-size: 10pt;
 }
-.header .name{
+.header .name {
   font-weight: 500;
 }
-.header .name,.header .last-seen{
+.header .name,
+.header .last-seen {
   margin-bottom: 0 !important;
 }
 
@@ -76,10 +77,11 @@ emoji-mart {
 .Left-section .left-section .message {
   margin: 2px 0 0 20px;
   font-size: 10pt;
-  color:#515151;
+  color: #515151;
 }
 .Left-section .left-section .username {
-  .name,.msg-notification-nb{
+  .name,
+  .msg-notification-nb {
     margin-bottom: 0 !important;
   }
   .msg-notification-nb {
@@ -94,7 +96,6 @@ emoji-mart {
     display: inline-block;
     margin-left: 10px;
   }
-  
 }
 /* .sidebar .left-section {
   height:65px;
@@ -104,35 +105,35 @@ emoji-mart {
       border-bottom: solid 1px #E0E0E0;
   }
 } */
- .sidebar{
+.sidebar {
   max-height: 100vh; /* adjust based on your layout */
   overflow-y: auto;
- }
-.sidebar .left-section.friends{
+}
+.sidebar .left-section.friends {
   display: flex;
   align-items: center;
   padding: 10px 0;
   margin: 0px;
   flex-direction: row;
   background-color: #fff;
-  width:100%;
+  width: 100%;
 }
-.sidebar .left-section{
+.sidebar .left-section {
   margin-top: 20px;
   max-height: 80vh; /* adjust based on your layout */
   overflow-y: auto;
 }
-.sidebar .btn-primary{
-	background-color: #4088c2;
-	border: 1px solid #4088c2;
-	border-radius: 5px;
+.sidebar .btn-primary {
+  background-color: #4088c2;
+  border: 1px solid #4088c2;
+  border-radius: 5px;
   margin-bottom: 15px;
-  span{
+  span {
     font-size: 13px;
-    gap:5px;
+    gap: 5px;
   }
 }
-.members-searchbar{
+.members-searchbar {
   border: 2px solid #3897e5;
   border-radius: 35px;
   margin-bottom: 15px;
@@ -143,7 +144,7 @@ emoji-mart {
   color: #333;
   width: 80%;
 }
-.senderOnMsg{
+.senderOnMsg {
   font-size: 11px;
   margin-bottom: 2px;
   color: #888;
@@ -179,7 +180,7 @@ emoji-mart {
   background-color: #ffffff;
   color: #555;
   padding: 1rem;
-  box-shadow: -2px 0 5px rgba(0,0,0,0.2);
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
   transition: right 0.3s ease;
   z-index: 1000;
 }
@@ -244,7 +245,7 @@ emoji-mart {
 .profile-userbuttons .btn:last-child {
   margin-right: 0px;
 }
-    
+
 .profile-usermenu {
   margin-top: 30px;
 }
@@ -292,11 +293,11 @@ emoji-mart {
 }
 
 .header-chat .photo {
-  margin-left:20px;
+  margin-left: 20px;
   display: block;
   width: 40px;
   height: 40px;
-  background: #E6E7ED;
+  background: #e6e7ed;
   -moz-border-radius: 50px;
   -webkit-border-radius: 50px;
   border-radius: 50px;
@@ -306,16 +307,16 @@ emoji-mart {
 }
 
 .header-chat .online {
-position: relative;
-top: 30px;
-left: 28px;
-width: 13px;
-height: 13px;
-background-color: #8BC34A;
-border-radius: 13px;
-border: 3px solid #FAFAFA;
+  position: relative;
+  top: 30px;
+  left: 28px;
+  width: 13px;
+  height: 13px;
+  background-color: #8bc34a;
+  border-radius: 13px;
+  border: 3px solid #fafafa;
 }
-.date-text{
+.date-text {
   text-align: center;
   color: #666;
 }
@@ -324,7 +325,7 @@ border: 3px solid #FAFAFA;
   padding: 25px 0px 25px 20px;
   height: 75vh;
   overflow-y: auto;
-    /* Chrome, Safari scroll */
+  /* Chrome, Safari scroll */
   &::-webkit-scrollbar {
     width: 8px;
     height: 6px;
@@ -335,7 +336,12 @@ border: 3px solid #FAFAFA;
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 0, 0, 0.2); /* thanh kéo màu mờ, có thể là transparent */
+    background-color: rgba(
+      0,
+      0,
+      0,
+      0.2
+    ); /* thanh kéo màu mờ, có thể là transparent */
     border-radius: 4px;
   }
   /* display: flex;
@@ -344,35 +350,36 @@ border: 3px solid #FAFAFA;
 }
 
 .messages-chat .message {
-  display:flex;
+  display: flex;
   margin-bottom: 8px;
 }
 
 .Right-section .messages-chat .message .photo {
-    display: block;
-    width: 45px;
-    height: 45px;
-    background: #E6E7ED;
-    -moz-border-radius: 50px;
-    -webkit-border-radius: 50px;
-    border-radius: 50px;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+  display: block;
+  width: 45px;
+  height: 45px;
+  background: #e6e7ed;
+  -moz-border-radius: 50px;
+  -webkit-border-radius: 50px;
+  border-radius: 50px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .Right-section .messages-chat .text {
-  background-color: #E6E4E4;
+  background-color: #e6e4e4;
   padding: 15px;
   border-radius: 12px;
   margin-left: 14px;
-  margin-bottom:10px;
-  &.hide-text{
-    display:none;
+  margin-bottom: 10px;
+  width: fit-content;
+  &.hide-text {
+    display: none;
   }
 }
 .Right-section .messages-chat .message .text {
-  margin-left:15px;
+  margin-left: 15px;
   margin-right: 14px;
 }
 .text-only {
@@ -387,11 +394,9 @@ border: 3px solid #FAFAFA;
   margin-top: 7px;
   font-weight: 500;
 }
-.readBy{
+.readBy {
   margin-left: 5px;
 }
-
-
 
 .response-time {
   float: right;
@@ -401,32 +406,31 @@ border: 3px solid #FAFAFA;
 .response {
   float: right;
   margin-right: 20px;
-  margin-left:auto; /* flexbox alignment rule */
+  margin-left: auto; /* flexbox alignment rule */
 }
 
 .response .text {
   background-color: #e3effd !important;
+  margin-left: auto !important;
 }
 .override-ml {
   margin-left: 0 !important;
 }
 
 .footer-chat {
-  width:-webkit-fill-available;
+  width: -webkit-fill-available;
   height: 70px;
-  display:flex;
+  display: flex;
   align-items: center;
-  position:absolute;
+  position: absolute;
   bottom: 14px;
   background-color: transparent;
   background-color: #f5f5f5;
-  
 }
 
-  
 .desc-contact {
   height: 43px;
-  width:45%;
+  width: 45%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -435,25 +439,25 @@ border: 3px solid #FAFAFA;
 .Left-section .left-section .name {
   margin: 0 0 0 20px;
   font-size: 11pt;
-  color:#515151;
+  color: #515151;
 }
 
 .Left-section .left-section .message {
   margin: 2px 0 0 20px;
   font-size: 10pt;
-  color:#515151;
+  color: #515151;
 }
 
 .Right-section .footer-chat .icon {
   margin-left: 15px;
-  color:#4e9ad9;
+  color: #4e9ad9;
   font-size: 30px;
 }
-.Right-section .footer-chat .emoji{
+.Right-section .footer-chat .emoji {
   margin-bottom: 2px !important;
 }
-.Right-section .footer-chat .attach{
-  margin-right:22px;
+.Right-section .footer-chat .attach {
+  margin-right: 22px;
   font-size: 25px;
 }
 
@@ -488,8 +492,7 @@ border: 3px solid #FAFAFA;
   }
 }
 
-
-.sub-footer{
+.sub-footer {
   display: flex;
   align-items: center;
   background-color: #fff;
@@ -503,7 +506,7 @@ border: 3px solid #FAFAFA;
   margin: 0 0 0 20px;
   text-transform: uppercase;
   font-size: 13pt;
-  color:#515151;
+  color: #515151;
 }
 
 .Right-section .footer-chat .right {
@@ -512,8 +515,8 @@ border: 3px solid #FAFAFA;
 }
 
 .write-message {
-  border:none !important;
-  width:90%;
+  border: none !important;
+  width: 90%;
   height: 50px;
   margin-left: 20px;
   padding: 10px;
@@ -526,16 +529,16 @@ border: 3px solid #FAFAFA;
   font-size: 13pt;
 }
 .footer-chat input *:-moz-placeholder {
-  color: #C0C0C0;
+  color: #c0c0c0;
   font-size: 13pt;
 }
 .footer-chat input *::-moz-placeholder {
-  color: #C0C0C0;
+  color: #c0c0c0;
   font-size: 13pt;
-  margin-left:5px;
+  margin-left: 5px;
 }
 .footer-chat input *:-ms-input-placeholder {
-  color: #C0C0C0;
+  color: #c0c0c0;
   font-size: 13pt;
 }
 
@@ -551,9 +554,9 @@ border: 3px solid #FAFAFA;
   max-height: 200px;
   overflow-y: auto;
   width: 52vh;
-  top:57px;
+  top: 57px;
   border-radius: 5px;
-  padding:5px;
+  padding: 5px;
 }
 
 .left-section.chat-conversation {
@@ -561,10 +564,10 @@ border: 3px solid #FAFAFA;
   padding: 9.5px;
   cursor: pointer;
   border-bottom: 1px solid #d7d6d6;
-  .username{
+  .username {
     margin-left: 15px;
   }
-  &:last-child{
+  &:last-child {
     border-bottom: none;
   }
 }
@@ -572,27 +575,28 @@ border: 3px solid #FAFAFA;
 .left-section.chat-conversation:hover {
   background-color: #f0f0f0;
 }
-.fa-ellipsis-vertical{
+.fa-ellipsis-vertical {
   margin-top: 15px;
   cursor: pointer;
 }
-.response .fa-ellipsis-vertical{
+.response .fa-ellipsis-vertical {
   /* position: relative;
   bottom:47px; */
   display: none;
 }
-.response .fa-ellipsis-vertical::before{
+.response .fa-ellipsis-vertical::before {
   position: absolute;
-  top:20px;
+  top: 20px;
 }
 .response .fa-ellipsis-vertical.has-reply::before {
   top: 50px;
 }
-.message .fa-ellipsis-vertical{
+.message .fa-ellipsis-vertical {
   display: none;
   margin-left: 10px;
 }
-.response:hover,.message:hover {
+.response:hover,
+.message:hover {
   .fa-ellipsis-vertical {
     display: block;
   }
@@ -606,7 +610,7 @@ border: 3px solid #FAFAFA;
   position: absolute;
   background: white;
   border: 1px solid #ccc;
-  box-shadow: 0 0 8px rgba(0,0,0,0.1);
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
   padding: 6px 0;
   z-index: 10;
 }
@@ -635,7 +639,7 @@ border: 3px solid #FAFAFA;
   position: absolute;
   background: white;
   border: 1px solid #ccc;
-  box-shadow: 0 0 8px rgba(0,0,0,0.1);
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
   padding: 6px 0;
   z-index: 10;
   width: max-content;
@@ -652,7 +656,6 @@ border: 3px solid #FAFAFA;
   right: 100%;
   z-index: 10;
 }
-
 
 .message-options li:hover {
   background-color: #f0f0f0;
@@ -707,15 +710,14 @@ border: 3px solid #FAFAFA;
   margin-top: 5px;
 }
 
-  
-.image-preview{
-  margin-left:20px;
+.image-preview {
+  margin-left: 20px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   margin-left: auto;
   gap: 2px;
   padding-left: 15px;
-  &.single{
+  &.single {
     display: block;
   }
 }
@@ -769,7 +771,12 @@ border: 3px solid #FAFAFA;
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 0, 0, 0.2); /* thanh kéo màu mờ, có thể là transparent */
+    background-color: rgba(
+      0,
+      0,
+      0,
+      0.2
+    ); /* thanh kéo màu mờ, có thể là transparent */
     border-radius: 4px;
   }
 
@@ -778,14 +785,12 @@ border: 3px solid #FAFAFA;
   }
 }
 
-
-.footer-chat .cancel-file{
+.footer-chat .cancel-file {
   border: none;
   background-color: transparent;
   font-size: 12px;
-  max-width:20px;
+  max-width: 20px;
 }
-
 
 .group-avatar {
   position: relative;
@@ -829,8 +834,6 @@ border: 3px solid #FAFAFA;
   margin-left: 0.5rem;
 }
 
-
-
 .image-wrapper {
   display: flex;
   flex-direction: column;
@@ -846,8 +849,7 @@ border: 3px solid #FAFAFA;
   border: 1px solid #ccc;
 }
 
-
- .file-name {
+.file-name {
   text-align: center;
   font-size: 14px;
   /* white-space: nowrap; */
@@ -865,7 +867,7 @@ border: 3px solid #FAFAFA;
   font-size: 16px;
   cursor: pointer;
   position: absolute;
-  margin-right:-70px;
+  margin-right: -70px;
 }
 .file-wrapper {
   display: flex;
@@ -886,7 +888,7 @@ border: 3px solid #FAFAFA;
 .date-wrapper {
   display: flex;
   justify-content: center; /* Canh giữa theo chiều ngang */
-  margin: 10px 0;           /* Khoảng cách với các tin nhắn */
+  margin: 10px 0; /* Khoảng cách với các tin nhắn */
 }
 
 .date-divider {
@@ -899,16 +901,15 @@ border: 3px solid #FAFAFA;
   border-radius: 25px;
 }
 
-
 .search-dropdown {
   max-width: 400px;
-  max-height: 220px;  /* Giới hạn chiều cao, có scroll nếu vượt */
+  max-height: 220px; /* Giới hạn chiều cao, có scroll nếu vượt */
   overflow-y: auto;
   background: #fff;
   border: 1px solid #ddd;
   border-radius: 6px;
   padding: 8px 12px;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   font-size: 14px;
   margin-top: 6px;
 }
@@ -985,4 +986,16 @@ border: 3px solid #FAFAFA;
   font-weight: 500;
 }
 
-
+.row .alert.fail {
+  opacity: 1;
+  visibility: visible;
+  width: 30%;
+  text-align: center;
+  padding: 20px 15px 15px;
+  position: absolute;
+  top: 18px;
+  right: 18px;
+  transition: opacity 0.4s ease-in-out, visibility 0.4s ease-in-out;
+  background-color: rgba(237, 154, 154, 0.917);
+  z-index: 100;
+}
